added the event/type endpoint
