# api/swagger.yaml
@@ -41,6 +41,57 @@ paths:
           schema:
             $ref: "#/definitions/Error"
       x-swagger-router-controller: "Events"
+  /event/type:
+    get:
+      tags:
+      - "Events"
+      summary: "An endpoint returning all available event types"
+      description: "Collect of event types. \n"
+      operationId: "eventTypeGET"
+      parameters:
+      - name: "pageSize"
+        in: "query"
+        description: "Number of items to be returned"
+        required: false
+        type: "number"
+        format: "short"
+      - name: "offset"
+        in: "query"
+        description: "Specify property to order by"
+        required: false
+        type: "string"
+        format: "propertyname ASC|DESC"
+      - name: "orderBy"
+        in: "query"
+        description: "Specify property to order by"
+        required: false
+        type: "string"
+        format: "propertyname ASC|DESC"
+      responses:
+        200:
+          description: "An array of event types"
+          schema:
+            $ref: "#/definitions/EventTypeResult"
+          examples:
+            application/json:
+              total: 2000
+              offset: 0
+              pageSize: 2
+              hits:
+              - id: "pageView"
+                description: "User has visited a web page"
+                schema:
+                  properties:
+                    pageTitle:
+                      type: "string"
+                    tags:
+                      type: "string"
+                  required: []
+        default:
+          description: "Unexpected error"
+          schema:
+            $ref: "#/definitions/Error"
+      x-swagger-router-controller: "Events"
   /profile:
     get:
       tags:
@@ -150,6 +201,37 @@ definitions:
         description: "Query result"
         items:
           $ref: "#/definitions/Profile"
+  EventTypeResult:
+    type: "object"
+    properties:
+      total:
+        type: "number"
+        format: "long"
+        description: "Total number of event types"
+      offset:
+        type: "number"
+        format: "long"
+        description: "The requested offset in number of items, starting at 0"
+      pageSize:
+        type: "number"
+        format: "short"
+        description: "Requested number of items to be returned"
+      hits:
+        type: "array"
+        description: "result"
+        items:
+          $ref: "#/definitions/EventType"
+  EventType:
+    type: "object"
+    properties:
+      id:
+        type: "string"
+        description: "the unique identifier of th event type. Custom event types mist\
+          \ be prefixed with namespace for example mycompany.<eventTypeId>."
+      schema:
+        type: "object"
+        description: "JSON schema for optional event's data. For more info see http://json-schema.org/documentation.html"
+        properties: {}
   Profile:
     type: "object"
     properties:
